--- a/iTrust/tasks/main.yml
+++ b/iTrust/tasks/main.yml
@@ -13,11 +13,11 @@
     state: absent
     path: '{{iTrust_path}}'
 
-- name: Cloning iTrust1 Github repo
+- name: Cloning iTrust Github repo
   git:
     repo: https://{{ github_username | urlencode }}:{{ github_password}}@github.ncsu.edu/engr-csc326-staff/iTrust2-v2.git
     clone: yes
-    dest: /home/vagrant/{{iTrust_path}}
+    dest: "{{ vagrant_home }}{{ iTrust_path }}"
 
 - name: Add Oracle Java Repository
   become: yes
@@ -53,23 +53,23 @@
 
 
 - name: Create db.properties file from db.properties.template
-  copy: remote_src=true src={{iTrust_path}}/iTrust2/src/main/java/db.properties.template dest=~/{{iTrust_path}}/iTrust2/src/main/java/db.properties
+  copy: remote_src=true src={{iTrust_path}}/iTrust2/src/main/java/db.properties.template dest="{{ vagrant_home }}{{ iTrust_path }}/iTrust2/src/main/java/db.properties"
 
 - name: Create hibernate.properties from hibernate.properties.template
-  copy: remote_src=true src={{iTrust_path}}/iTrust2/src/main/resources/hibernate.properties.template dest=~/{{iTrust_path}}/iTrust2/src/main/resources/hibernate.properties
+  copy: remote_src=true src={{ iTrust_path}}/iTrust2/src/main/resources/hibernate.properties.template dest="{{ vagrant_home }}{{ iTrust_path }}/iTrust2/src/main/resources/hibernate.properties"
 
 - name: Copy hibernate.cfg.xml to src/main/resources/ folder
-  copy: remote_src=true src={{iTrust_path}}/iTrust2/src/main/java/email.properties.template dest=~/{{iTrust_path}}/iTrust2/src/main/java/email.properties
+  copy: remote_src=true src={{iTrust_path}}/iTrust2/src/main/java/email.properties.template dest="{{ vagrant_home }}{{ iTrust_path }}/iTrust2/src/main/java/email.properties"
 
 - name: Replace {{root_db_password}} with the root_password variable
   replace:
-   path: {{iTrust_path}}/iTrust2/src/main/java/db.properties
+   path: "{{ iTrust_path }}/iTrust2/src/main/java/db.properties"
    regexp: 'password'
    replace: "password {{root_password}}"
 
 - name: Replace {{root_db_password}} with the root_password variable
   replace:
-   path: {{iTrust_path}}/iTrust2/src/main/resources/hibernate.properties
+   path: "{{ iTrust_path }}/iTrust2/src/main/resources/hibernate.properties"
    regexp: 'hibernate.connection.password = '
    replace: "hibernate.connection.password = {{root_password}}"
 
@@ -88,7 +88,7 @@
 - name: Creating the sample tables
   shell: mvn process-test-classes
   args:
-   chdir: {{iTrust_path}}/iTrust2
+   chdir: "{{ iTrust_path }}/iTrust2"
 
 - name: 2 Minute Wait time for application start-up
   pause:
@@ -97,4 +97,4 @@
 - name: Starting the application
   shell: nohup mvn jetty:run &
   args:
-   chdir: {{iTrust_path}}/iTrust2
+   chdir: "{{ iTrust_path }}/iTrust2"
