--- a/itrust_2.yml
+++ b/itrust_2.yml
@@ -9,6 +9,15 @@
 
   - name: Copy hibernate.cfg.xml to src/main/resources/ folder
     copy: remote_src=true src={{iTrust_path}}/iTrust2/src/main/java/email.properties.template dest="{{ iTrust_path }}/iTrust2/src/main/java/email.properties"
+  
+  - name: Copy fuzzer code to workspace
+    copy: remote_src=true src=/tmp/fuzz.js dest="{{ iTrust_path }}/iTrust2/fuzz.js"
+
+  - name: Copy fuzzer code to workspace
+    copy: remote_src=true src={{iTrust_path}}/iTrust2/pom.xml dest="{{ iTrust_path }}/iTrust2/pom.xml_temp"
+    
+  - name: Copy fuzzer code to workspace
+    copy: remote_src=true src={{iTrust_path}}/iTrust2/pom_data.xml dest="{{ iTrust_path }}/iTrust2/pom.xml"
 
   - name: Replace {{root_password}} with the root_password variable
     replace:
@@ -21,3 +30,33 @@
      path: "{{ iTrust_path }}/iTrust2/src/main/resources/hibernate.properties"
      regexp: 'hibernate.connection.password = '
      replace: "hibernate.connection.password = {{mysql_password}}"
+
+  - name: Replace from in email file
+    replace:
+     path: "{{ iTrust_path }}/iTrust2/src/main/java/email.properties"
+     regexp: 'from'
+     replace: "from {{email_from}}"
+
+  - name: Replace email_id in email file
+    replace:
+     path: "{{ iTrust_path }}/iTrust2/src/main/java/email.properties"
+     regexp: 'username'
+     replace: "username {{email_username}}"     
+
+  - name: Replace password in email file
+    replace:
+     path: "{{ iTrust_path }}/iTrust2/src/main/java/email.properties"
+     regexp: 'password'
+     replace: "password {{email_password}}"
+     
+  - name: Install faker
+    npm:
+      name: faker
+      path: "{{ iTrust_path }}"
+      state: present
+
+  - name: Install faker
+    npm:
+      name: random-js
+      path: "{{ iTrust_path }}"
+      state: present
