--- a/roles/create_instances/vars/aws_credentials.yml
+++ b/roles/create_instances/vars/aws_credentials.yml
@@ -16,7 +16,7 @@ secret_key: !vault |
           3036343530663331616230373833633930323038613033626463
 
 kname: New1
-instance_type: t2.micro
+instance_type: t2.xlarge
 region_name: us-east-2
 image_name: ami-965e6bf3
 wait_var: yes
@@ -25,6 +25,6 @@ instance_name: Instances for App
 aws_service: ec2
 public_ip: yes
 wait_time: 600
-count: 3
+count: 1
 group_name1: default
 group_name2: Tomcat
