--- a/roles/install_jenkins/tasks/main.yml
+++ b/roles/install_jenkins/tasks/main.yml
@@ -18,26 +18,45 @@
    update_cache: yes
    state: present
   become: yes
+    
+- name: Download nodeJs installer
+  get_url: url=https://deb.nodesource.com/setup_8.x  dest=/tmp/node_8.sh
 
+- name: Execute the installer
+  shell: sudo sh /tmp/node_8.sh
+
+- name: Install nodejs 
+  apt:
+    pkg: nodejs
+    state: present
+  become: yes
+  
 - name: Install packages
-  apt: pkg={{ item }} state=present update_cache=true
+  apt: pkg={{ item }} state=present update_cache=yes
   with_items:
    - git
    - openjdk-8-jdk
    - ansible
+   - python-pip
   become: yes
 
+- name: Install ansible modules
+  become: yes
+  pip: name={{ item }}
+  with_items:
+   - python-jenkins
+   - lxml
+   
 - name: java version set
   become: yes
   shell: update-alternatives --config java
 
-- name: Install Jenkins
-  apt:
-    name: jenkins
-    state: present
-    update_cache: yes
+- name: Install Jenkins	
+  apt:	
+    name: jenkins	
+    state: present	
+    update_cache: yes	
   become: yes
-  register: jenkins_install
 
 - name: Replace the config.xml file
   template:
@@ -62,7 +81,7 @@
 - name: Defaulting setup wizard to false
   lineinfile:
    path: /etc/default/jenkins
-   line: JAVA_ARGS="-Djenkins.install.runSetupWizard=false"
+   line: JAVA_ARGS="${JAVA_ARGS} -Djenkins.install.runSetupWizard=false -Dhudson.model.DirectoryBrowserSupport.CSP=\"\""
    state: present
   become: yes
 
@@ -97,6 +116,11 @@
     - postbuildscript
     - postbuild-task
     - ws-cleanup
+    - jacoco
+    - build-timeout
+    - junit
+    - test-stability
+    - htmlpublisher
   become: yes
 
 - name: Restart Jenkins
@@ -144,4 +168,11 @@
    state: touch
    owner: jenkins
    group: jenkins
+  become: yes
+
+- name: Adding jenkins as sudo user
+  lineinfile:
+   path: /etc/sudoers
+   line: "jenkins        ALL=(ALL)       NOPASSWD: ALL"
+   state: present
   become: yes
