--- a/roles/create_instances/vars/aws_credentials.yml
+++ b/roles/create_instances/vars/aws_credentials.yml
@@ -16,15 +16,13 @@ secret_key: !vault |
           3036343530663331616230373833633930323038613033626463
 
 kname: New1
-instance_type: t2.micro
+app_instance_type: t2.micro
+jenkins_instance_type: t2.xlarge
 region_name: us-east-2
 image_name: ami-965e6bf3
-wait_var: yes
 vpc_subnet_id: subnet-310db959
 instance_name: Instances for App
-aws_service: ec2
-public_ip: yes
 wait_time: 600
-count: 3
+count: 8
 group_name1: default
 group_name2: Tomcat
