--- a/install_dependencies.yml
+++ b/install_dependencies.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: jenkins,itrust,checkbox
+- hosts: jenkins,itrust1,itrust2,itrust3,itrust4,itrust5,checkbox,canary,proxy
   gather_facts: no
   roles:
     - install_dependencies
