--- a/roles/create_instances/tasks/main.yml
+++ b/roles/create_instances/tasks/main.yml
@@ -14,58 +14,150 @@
    - python-jenkins
    - lxml
 
-- name: Creating an ec2 instance
+- name: Creating jenkins ec2 instance
   ec2:
    aws_access_key: "{{access_key}}"
    aws_secret_key: "{{secret_key}}"
    key_name: "{{kname}}"
-   instance_type: "{{instance_type}}"
+   instance_type: "{{jenkins_instance_type}}"
    region: "{{region_name}}"
    image: "{{image_name}}"
-   wait: "{{wait_var}}"
+   wait: yes
    groups: ['{{group_name1}}' , '{{group_name2}}']
    vpc_subnet_id: "{{vpc_subnet_id}}"
-   assign_public_ip: "{{public_ip}}"
+   assign_public_ip: yes
+   wait_timeout: "{{wait_time}}"
+   count: 1
+   instance_tags:
+    Name: Jenkins_Server
+  register: jenkins_instance
+
+- name: Creating app ec2 instances
+  ec2:
+   aws_access_key: "{{access_key}}"
+   aws_secret_key: "{{secret_key}}"
+   key_name: "{{kname}}"
+   instance_type: "{{app_instance_type}}"
+   region: "{{region_name}}"
+   image: "{{image_name}}"
+   wait: yes
+   groups: ['{{group_name1}}' , '{{group_name2}}']
+   vpc_subnet_id: "{{vpc_subnet_id}}"
+   assign_public_ip: yes
    wait_timeout: "{{wait_time}}"
    count: "{{count}}"
    instance_tags:
     Name: "{{instance_name}}"
-  register: "{{aws_service}}"
+  register: ec2
 
 - name: Adding host for Jenkins
   add_host:
-   hostname: "{{ec2.instances[0].public_ip}}"
+   hostname: "{{jenkins_instance.instances[0].public_ip}}"
    groupname: jenkins
    ansible_ssh_user: ubuntu
    ansible_ssh_private_key_file: "{{project_path}}/ec2.key"
 - debug:
-   msg: "Jenkins server IP address {{ ec2.instances[0].public_ip }}"
+   msg: "Jenkins server IP address {{ jenkins_instance.instances[0].public_ip }}"
 
-- name: Adding host for iTrust2
+- name: Adding host for iTrust2 - 1
+  add_host:
+   hostname: "{{ec2.instances[0].public_ip}}"
+   ansible_host: "{{ec2.instances[0].public_ip}}"
+   groupname: itrust1
+   ansible_ssh_user: ubuntu
+   ansible_ssh_private_key_file: "{{project_path}}/ec2.key"
+- debug:
+   msg: "iTrust2 server IP address {{ ec2.instances[0].public_ip }}"
+
+- name: Adding host for iTrust2 - 2
   add_host:
    hostname: "{{ec2.instances[1].public_ip}}"
-   groupname: itrust
+   ansible_host: "{{ec2.instances[1].public_ip}}"
+   groupname: itrust2
    ansible_ssh_user: ubuntu
    ansible_ssh_private_key_file: "{{project_path}}/ec2.key"
 - debug:
    msg: "iTrust2 server IP address {{ ec2.instances[1].public_ip }}"
 
-- name: Adding host for checkbox
+- name: Adding host for iTrust2 - 3
   add_host:
    hostname: "{{ec2.instances[2].public_ip}}"
+   ansible_host: "{{ec2.instances[2].public_ip}}"
+   groupname: itrust3
+   ansible_ssh_user: ubuntu
+   ansible_ssh_private_key_file: "{{project_path}}/ec2.key"
+- debug:
+   msg: "iTrust2 server IP address {{ ec2.instances[2].public_ip }}"
+
+- name: Adding host for iTrust2 - 4
+  add_host:
+   hostname: "{{ec2.instances[3].public_ip}}"
+   ansible_host: "{{ec2.instances[3].public_ip}}"
+   groupname: itrust4
+   ansible_ssh_user: ubuntu
+   ansible_ssh_private_key_file: "{{project_path}}/ec2.key"
+- debug:
+   msg: "iTrust2 server IP address {{ ec2.instances[3].public_ip }}"
+
+- name: Adding host for iTrust2 - 5
+  add_host:
+   hostname: "{{ec2.instances[4].public_ip}}"
+   ansible_host: "{{ec2.instances[4].public_ip}}"
+   groupname: itrust5
+   ansible_ssh_user: ubuntu
+   ansible_ssh_private_key_file: "{{project_path}}/ec2.key"
+- debug:
+   msg: "iTrust2 server IP address {{ ec2.instances[4].public_ip }}"
+
+- name: Adding host for checkbox
+  add_host:
+   hostname: "{{ec2.instances[5].public_ip}}"
+   ansible_host: "{{ec2.instances[5].public_ip}}"
    groupname: checkbox
    ansible_ssh_user: ubuntu
    ansible_ssh_private_key_file: "{{project_path}}/ec2.key"
 - debug:
-   msg: "Checkbox server IP address {{ ec2.instances[2].public_ip }}"
+   msg: "Checkbox server IP address {{ ec2.instances[5].public_ip }}"
+
+- name: Adding host for canary
+  add_host:
+   hostname: "{{ec2.instances[6].public_ip}}"
+   ansible_host: "{{ec2.instances[6].public_ip}}"
+   groupname: canary
+   ansible_ssh_user: ubuntu
+   ansible_ssh_private_key_file: "{{project_path}}/ec2.key"
+- debug:
+   msg: "Canary server IP address {{ ec2.instances[2].public_ip }}"
+
+- name: Adding host for proxy server
+  add_host:
+   hostname: "{{ec2.instances[7].public_ip}}"
+   ansible_host: "{{ec2.instances[7].public_ip}}"
+   groupname: proxy
+   ansible_ssh_user: ubuntu
+   ansible_ssh_private_key_file: "{{project_path}}/ec2.key"
+- debug:
+   msg: "Proxy server IP address {{ ec2.instances[2].public_ip }}"
 
 - local_action: file path={{project_path}}/hosts state=absent
   ignore_errors: yes
 - local_action: file path=./hosts state=touch
-- local_action: lineinfile line="[jenkins] \nJenkins_Server ansible_host={{ ec2.instances[0].public_ip }} ansible_ssh_user=ubuntu ansible_ssh_private_key_file={{project_path}}/ec2.key" insertafter=EOF dest={{project_path}}/hosts
-- local_action: lineinfile line="[itrust] \niTrust_Server ansible_host={{ ec2.instances[1].public_ip }} ansible_ssh_user=ubuntu ansible_ssh_private_key_file={{project_path}}/ec2.key" insertafter=EOF dest={{project_path}}/hosts
-- local_action: lineinfile line="[checkbox] \nCheckbox_Server ansible_host={{ ec2.instances[2].public_ip }} ansible_ssh_user=ubuntu ansible_ssh_private_key_file={{project_path}}/ec2.key" insertafter=EOF dest={{project_path}}/hosts
+- local_action: lineinfile line="[jenkins] \n{{jenkins_instance.instances[0].public_ip}} ansible_host={{ jenkins_instance.instances[0].public_ip }} ansible_ssh_user=ubuntu ansible_ssh_private_key_file={{project_path}}/ec2.key" insertafter=EOF dest={{project_path}}/hosts
+- local_action: lineinfile line="[itrust1] \n{{ec2.instances[0].public_ip}} ansible_host={{ ec2.instances[0].public_ip }} ansible_ssh_user=ubuntu ansible_ssh_private_key_file={{project_path}}/ec2.key" insertafter=EOF dest={{project_path}}/hosts
+- local_action: lineinfile line="[itrust2] \n{{ec2.instances[1].public_ip}} ansible_host={{ ec2.instances[1].public_ip }} ansible_ssh_user=ubuntu ansible_ssh_private_key_file={{project_path}}/ec2.key" insertafter=EOF dest={{project_path}}/hosts
+- local_action: lineinfile line="[itrust3] \n{{ec2.instances[2].public_ip}} ansible_host={{ ec2.instances[2].public_ip }} ansible_ssh_user=ubuntu ansible_ssh_private_key_file={{project_path}}/ec2.key" insertafter=EOF dest={{project_path}}/hosts
+- local_action: lineinfile line="[itrust4] \n{{ec2.instances[3].public_ip}} ansible_host={{ ec2.instances[3].public_ip }} ansible_ssh_user=ubuntu ansible_ssh_private_key_file={{project_path}}/ec2.key" insertafter=EOF dest={{project_path}}/hosts
+- local_action: lineinfile line="[itrust5] \n{{ec2.instances[4].public_ip}} ansible_host={{ ec2.instances[4].public_ip }} ansible_ssh_user=ubuntu ansible_ssh_private_key_file={{project_path}}/ec2.key" insertafter=EOF dest={{project_path}}/hosts
+- local_action: lineinfile line="[checkbox] \n{{ec2.instances[5].public_ip}} ansible_host={{ ec2.instances[5].public_ip }} ansible_ssh_user=ubuntu ansible_ssh_private_key_file={{project_path}}/ec2.key" insertafter=EOF dest={{project_path}}/hosts
+- local_action: lineinfile line="[canary] \n{{ec2.instances[6].public_ip}} ansible_host={{ ec2.instances[6].public_ip }} ansible_ssh_user=ubuntu ansible_ssh_private_key_file={{project_path}}/ec2.key" insertafter=EOF dest={{project_path}}/hosts
+- local_action: lineinfile line="[proxy] \n{{ec2.instances[7].public_ip}} ansible_host={{ ec2.instances[7].public_ip }} ansible_ssh_user=ubuntu ansible_ssh_private_key_file={{project_path}}/ec2.key" insertafter=EOF dest={{project_path}}/hosts
 
+- name: Waiting for port 22 to become available
+  wait_for:
+   host: "{{ item.public_dns_name }}"
+   port: 22
+   state: started
+  with_items: "{{ jenkins_instance.instances }}"
 
 - name: Waiting for port 22 to become available
   wait_for:
@@ -73,6 +165,10 @@
    port: 22
    state: started
   with_items: "{{ ec2.instances }}"
+
+- name: Accept new ssh fingerprints
+  shell: ssh-keyscan -H {{ item.public_ip }} >> /home/ubuntu/.ssh/known_hosts
+  with_items: '{{ jenkins_instance.instances }}'
 
 - name: Accept new ssh fingerprints
   shell: ssh-keyscan -H {{ item.public_ip }} >> /home/ubuntu/.ssh/known_hosts
