--- a/main.yml
+++ b/main.yml
@@ -2,6 +2,11 @@
 - include: create_instance.yml
 - include: install_dependencies.yml
 - include: install_jenkins.yml
-- include: build_checkbox.yml
+- include: start_databases.yml
 - include: build_iTrust.yml
+- include: build_checkbox.yml
+- include: build_proxy.yml
+- include: monitor_itrust.yml
+- include: monitor_monkey.yml
+- include: run_proxy.yml
 ...
