--- a/roles/build_checkbox/tasks/main.yml
+++ b/roles/build_checkbox/tasks/main.yml
@@ -2,6 +2,10 @@
   shell: ssh-keyscan -H {{ hostvars[groups['checkbox'][0]].inventory_hostname}} >> /var/lib/jenkins/.ssh/known_hosts
   become: yes
 
+- name: Accept new ssh fingerprints for Checkbox.io
+  shell: ssh-keyscan -H {{ hostvars[groups['checkbox'][1]].inventory_hostname}} >> /var/lib/jenkins/.ssh/known_hosts
+  become: yes
+
 - name: Install packages for checkbox.io
   apt: pkg={{ item }} state=present
   with_items:
@@ -29,13 +33,27 @@
     dest: "{{project_path}}/roles/build_checkbox/templates/"
     flat: yes
 
+- name: Check if job exists
+  shell: "java -jar /tmp/jenkins-cli.jar -s http://{{hostvars[groups['jenkins'][0]]['inventory_hostname'] }}:8080/ list-jobs --username {{jenkins_url_username}} --password {{jenkins_url_password}}"
+  register: jenkins_jobs
+
+- name: Adding Git hook for Checkbox
+  github_hooks:
+    action: create
+    hookurl: "http://{{hostvars[groups['jenkins'][0]]['inventory_hostname'] }}:8080/github-webhook/"
+    user: '{{ checkbox_github_username }}'
+    oauthkey: '{{ checkbox_github_token }}'
+    repo: https://api.github.com/repos/balaramesh/checkbox.io
+
 - jenkins_job:
    config: "{{ lookup('file', '../templates/checkbox_config.xml') }}"
    name: Checkbox_Build
    password: "{{jenkins_url_password}}"
    url: http://{{inventory_hostname}}:8080
    user: "{{jenkins_url_username}}"
+  when: jenkins_jobs.stdout.find('Checkbox_Build')==-1
 
 - name: Involing checkbox build
   become: yes
   shell: "java -jar /tmp/jenkins-cli.jar -s http://{{inventory_hostname}}:8080/ build Checkbox_Build --username {{jenkins_url_username}} --password {{jenkins_url_password}} "
+  
