--- a/roles/create_instances/tasks/main.yml
+++ b/roles/create_instances/tasks/main.yml
@@ -94,11 +94,11 @@
   add_host:
    hostname: "{{ec2.instances[3].public_ip}}"
    ansible_host: "{{ec2.instances[3].public_ip}}"
-   groupname: checkbox
+   groupname: iTrust
    ansible_ssh_user: ubuntu
    ansible_ssh_private_key_file: "{{project_path}}/ec2.key"
 - debug:
-   msg: "Checkbox server IP address {{ ec2.instances[3].public_ip }
+   msg: "Checkbox server IP address {{ ec2.instances[3].public_ip }}"
 
 - local_action: file path={{project_path}}/hosts state=absent
   ignore_errors: yes
